# pds2020_remote_backup_service

./: .gitignore  README.md
Remote_Backup_Client/: BackupClient.cpp  BackupClient.h  CMakeLists.txt  Client.cpp  Client.h  FileToUpload.cpp  FileToUpload.h  FileWatcher.cpp  FileWatcher.h  Message.cpp  Message.h  UploadQueue.cpp  UploadQueue.h  main.cpp
Remote_Backup_Server/: CMakeLists.txt  FileToUpload.cpp  FileToUpload.h  Logger.cpp  Logger.h  Message.cpp  Message.h  Server.cpp  Server.h  Session.cpp  Session.h  UserMap.cpp  UserMap.h  main.cpp
